# knn-for-homology

./: .gitignore  Readme.md  pyproject.toml  terms.dic
.github/workflows/: pytest.yml
cath/: cath.py  cath_shared.py  compare_seqvec_layer.py  embed.py  embed_all.py  make_small_test_subset.py  search.py
more_sensitive/cath-figures/: accuracies.md  accuracies_euclidean.md  combining-mmseqs-and-knn-normalized.eps  combining-mmseqs-and-knn-normalized.npz  combining-mmseqs-and-knn-raw.eps  combining-mmseqs-and-knn-raw.npz  coverage-vs-accuracy.eps  length-vs-accuracy-binned.eps  length-vs-accuracy-binned.h5  length-vs-accuracy-binned2.eps  length-vs-accuracy.eps  length-vs-accuracy.npz  normalized_scores.csv  raw_scores.csv  seqvec_layer.npz  superfamily-vs-accuracy.eps  superfamily-vs-accuracy.npz  superfamily-vs-delta-accuracy.eps  superfamily-vs-delta-accuracy.npy.npz
more_sensitive/citations/: alignment.bib  ann.bib  ml.bib  other.bib  related.bib
more_sensitive/proteins-figures/: accuracy_over_hits.eps  auc1.eps  cosine_bucketed_accuracy.eps  (+4 more)
pfam/: .gitignore  embed_pfam_seqvec.py  embed_pfam_t5.py  embed_t5_fp16.py  embed_t5_l2.py  notes.md  pfam.py  pfam_shared.py  prepare_subset10_full_sequences.py  proteins.py  proteins_search.py  proteins_shared.py  reverse_embed.py  reverse_evaluate.py  reverse_shared.py  search.py
seqvec_search/: benchmark_mmseqs.sh  constants.py  create_index.py  data.py  lstm1_vs_sum.py  main.py  make_pfam_subset.py  make_subset.py  scop_preprocessing.py  tp_cumulative.py  utils.py
tests/: test_main.py  test_utils.py
(+46 files in other folders)
